PostCard overflow fix

--- a/src/styles/components/cards/PostCard/PostCard.module.scss
+++ b/src/styles/components/cards/PostCard/PostCard.module.scss
@@ -8,7 +8,6 @@
     position: relative;
     opacity: 1;
     padding: 25px 15px;
-    overflow: hidden;
 
     @include for-tablet-portrait-up {
         padding: 25px 35px 15px 35px;
